--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
     
     <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminate="true"/>
